...
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/serialScanButton"
            app:layout_constraintStart_toStartOf="@+id/space6"
            app:layout_constraintTop_toBottomOf="@+id/space6">

            <EditText
                android:id="@+id/serial_numb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ-"
                android:gravity="center_vertical"
                android:hint="@string/serial_numb"
                android:inputType="textCapCharacters"
...
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout8"
            app:layout_constraintEnd_toEndOf="@+id/space6"
            app:layout_constraintStart_toStartOf="@+id/space6"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/acquired_da"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890-"
                android:gravity="center_vertical"
                android:hint="@string/acquired_da"
                android:inputType="phone"
...
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout8"
            app:layout_constraintEnd_toEndOf="@+id/space6"
            app:layout_constraintStart_toStartOf="@+id/space6"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout9">

            <EditText
                android:id="@+id/make"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/make"
                android:lines="1"
                android:maxLines="1"
...
            app:layout_constraintEnd_toEndOf="@+id/space6"
            app:layout_constraintStart_toStartOf="@+id/space6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.40">

            <EditText
                android:id="@+id/model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Model"
                android:inputType="text"
                android:textAppearance="@style/new_item_activity_text"
...
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout11"
            app:layout_constraintEnd_toEndOf="@+id/space6"
            app:layout_constraintStart_toStartOf="@+id/space6"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout8">

            <EditText
                android:id="@+id/estimated_p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/estimated_p"
                android:inputType="numberDecimal"
                android:lines="1"
...
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout14" />

        <ImageView
            android:id="@+id/forwardButtonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
...
                android:text="Close"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/captureButtonCam"
                android:layout_width="148dp"
                android:layout_height="58dp"
                android:backgroundTint="@color/button"
                android:text="@string/capture"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
...
