...
                    app:layout_constraintBottom_toTopOf="@+id/textInputLayout19"
                    app:layout_constraintEnd_toEndOf="@+id/space9"
                    app:layout_constraintStart_toStartOf="@+id/space9"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/serialNumEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:enabled="false"

                        android:inputType="none"
...
                    app:layout_constraintBottom_toTopOf="@+id/textInputLayout21"
                    app:layout_constraintEnd_toEndOf="@+id/space9"
                    app:layout_constraintStart_toStartOf="@+id/space9"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/acqDateEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:enabled="false"

                        android:inputType="none"
...
                        tools:layout_editor_absoluteX="91dp"
                        tools:layout_editor_absoluteY="278dp" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/add_tag_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:backgroundTint="@color/button"
                    android:text="Add tag"
...

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/clear"
        android:visibility="visible"
        android:layout_marginRight="10dp"
        app:icon="@drawable/garbage_can"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/footer_bg" />

    <ImageView
        android:id="@+id/cameraButton"
        android:layout_width="85dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/camera_button" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="124dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cameraButton"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="83dp"
        android:layout_height="66dp"
        android:backgroundTint="@color/button"
        android:pointerIcon="arrow"
        app:icon="@drawable/back_arrow"
        app:iconPadding="0dp"
...
