<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Authentication.StartUpActivity"
    android:background="@color/bg_white">

    <ImageView
        android:id="@+id/profileMain"
        android:layout_width="73dp"
        android:layout_height="37dp"
        android:clickable="true"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/delete_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"></ImageView>

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginEnd="288dp"
        android:backgroundTint="@color/clear"
        android:contentDescription="Click to remove items"
        android:visibility="visible"
        app:icon="@drawable/garbage_can"
        app:iconSize="30dp"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/totalCostView"
        app:layout_constraintTop_toBottomOf="@id/tag_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ListView
            android:id="@+id/item_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="10.0sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:choiceMode="multipleChoice"/>
        <TextView
            android:id="@+id/nothingtoshowbanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/white"
            android:text="NOTHING TO SHOW"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="invisible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/totalCostView"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/bg_white"
        android:gravity="center"
        android:text="@string/total_value"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/footer_bg"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/sortButton"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/sort_button_text"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalCostView" />

    <Button
        android:id="@+id/filterButton"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/filter_button_text"
        android:visibility="visible"
        app:iconSize="50dp"
        app:iconTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalCostView" />

    <ImageView
        android:id="@+id/add_button"
        android:layout_width="85dp"
        android:layout_height="72dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:contentDescription="Click to add item"
        android:focusable="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/add_button" />

    <Button
        android:id="@+id/tag_btn"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/clear"
        app:icon="@drawable/tags_button"
        app:iconSize="30dp"
        app:iconTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="Click to apply tags"/>

    <SearchView
        android:id="@+id/searchBar"
        android:layout_width="197dp"
        android:layout_height="33dp"
        android:background="@color/white"
        android:backgroundTint="#D1C4C4"
        android:foregroundTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="@+id/tag_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

</androidx.constraintlayout.widget.ConstraintLayout>